--- a/product.html
+++ b/product.html
@@ -74,7 +74,7 @@
             <div class="collapse navbar-collapse" id="navbarContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a href="/PusatKSU"><span>Beranda</span></a>
+                  <a href="index.html"><span>Beranda</span></a>
                 </li>
                 <li class="nav-item">
                   <a href="about"><span>Tentang Kami </span></a>
@@ -83,10 +83,12 @@
                   <a href="services"><span>Produk dan Layanan </span></a>
                 </li>
                 <li class="nav-item">
-                  <a href="#"><span>Berita &amp; Acara</span></a>
+                  <a href="berita-dan-acara"><span>Berita &amp; Acara</span></a>
                 </li>
                 <li class="nav-item has-dropdown">
-                  <a href="#"><span>Informasi Keuangan </span></a>
+                  <a href="informasi-keuangan"
+                    ><span>Informasi Keuangan </span></a
+                  >
                 </li>
               </ul>
               <div class="module-container">
@@ -126,9 +128,7 @@
                 <!--  End .module-search-->
                 <!-- Start .module-contact-->
                 <div class="module-contact">
-                  <a class="btn btn--primary" href="javascript:void(0)"
-                    >Bergabung</a
-                  >
+                  <a class="btn btn--primary" href="join">Bergabung</a>
                 </div>
                 <!-- Start .module-language-->
               </div>
