--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="collapse navbar-collapse" id="navbarContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a href="/PusatKSU"><span>Beranda</span></a>
+                  <a href="index.html"><span>Beranda</span></a>
                 </li>
                 <li class="nav-item">
                   <a href="about"><span>Tentang Kami </span></a>
@@ -80,10 +80,10 @@
                   <a href="services"><span>Produk dan Layanan </span></a>
                 </li>
                 <li class="nav-item">
-                  <a href="#"><span>Berita &amp; Acara</span></a>
+                  <a href="berita-dan-acara"><span>Berita &amp; Acara</span></a>
                 </li>
                 <li class="nav-item has-dropdown">
-                  <a href="#"><span>Informasi Keuangan </span></a>
+                  <a href="informasi-keuangan"><span>Informasi Keuangan </span></a>
                 </li>
               </ul>
               <div class="module-container">
@@ -123,7 +123,7 @@
                 <!--  End .module-search-->
                 <!-- Start .module-contact-->
                 <div class="module-contact">
-                  <a class="btn btn--primary" href="javascript:void(0)"
+                  <a class="btn btn--primary" href="join"
                     >Bergabung</a
                   >
                 </div>
